comment added in hmtl and css file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+/* universal style start */
 *{
     margin: 0;
     padding: 0;
@@ -19,8 +20,9 @@ ul{
 p{
     font-size: 1.4rem;
 }
+/* universal style end */
 
-
+/* header section style start */
 header{
     background-color: #fef5ef;
 }
@@ -38,6 +40,8 @@ header{
     width: 100%;
     display: block;
 }
+
+/* navigation menu style start */
 .main-menu > ul > li, .active-links > ul > li{
     display: inline-block;
     padding: 30px 20px;
@@ -51,6 +55,35 @@ header{
 .main-menu > ul > li > a:hover{
     color: #b19361;
 }
+.main-menu ul li:hover ul.sub-menu{
+    transform: perspective(900px) rotateX(0deg);
+}
+ul .sub-menu{
+    background-color: #fff;
+    min-width: 230px;
+    position: absolute;
+    padding: 25px 20px;
+    top: 100%;
+    left: 0;
+    transform: perspective(600px) rotateX(-90deg);
+    transform-origin: top left;
+    transition: 0.5s;
+}
+ul .sub-menu > li{
+    padding: 10px 0px;
+}
+ul .sub-menu > li > a{
+    font-size: 1.4rem;
+    font-weight: 400;
+    display: block;
+    transition: 0.5s;
+}
+ul .sub-menu > li > a:hover{
+    transform: translateX(10px);
+    color: #b19361;
+}
+/* navigation menu style end */
+
 .active-links > ul > li > a{
     font-size: 2.5rem;
     position: relative;
@@ -78,7 +111,9 @@ header{
     line-height: 50px;
     border-radius: 50%;
 }
+/* header section style end */
 
+/* hero section style start */
 .hero-section{
     background-image: url('./images/hero-slider-home-1/hero-slider-1.jpg');
     height: 600px;
@@ -117,32 +152,4 @@ header{
     border-color: #b19361;
     color: #b19361;
 }
-ul .sub-menu{
-    background-color: #fff;
-    min-width: 230px;
-    position: absolute;
-    padding: 25px 20px;
-    top: 100%;
-    left: 0;
-    transform: perspective(600px) rotateX(-90deg);
-    transform-origin: top left;
-    transition: 0.5s;
-}
-ul .sub-menu > li{
-    padding: 10px 0px;
-}
-.main-menu ul li:hover ul.sub-menu{
-    transform: perspective(900px) rotateX(0deg)
-}
-ul .sub-menu > li > a{
-    font-size: 1.4rem;
-    font-weight: 400;
-}
-ul .sub-menu > li > a{
-    display: block;
-    transition: 0.5s;
-}
-ul .sub-menu > li > a:hover{
-    transform: translateX(10px);
-    color: #b19361;
-}
+/* hero section style end */
