--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ ul{
 p{
     font-size: 1.4rem;
 }
+.container{
+    width: 90%;
+    margin: auto;
+}
 /* universal style end */
 
 /* header section style start */
@@ -127,18 +131,18 @@ ul .sub-menu > li > a:hover{
     display: flex;
     align-items: center;
 }
-.content p{
+.hero-content p{
     font-size: 2rem;
     text-transform: uppercase;
     margin: 0 0 5px;
 }
-.content h2{
+.hero-content h2{
     font-size: 6.2rem;
     line-height: 65px;
     font-weight: 600;
     margin: 0 0 5px;
 }
-.content a{
+.hero-content a{
     padding: 15px 30px;
     border: 1px solid #24262b;
     margin: 50px 0 0;
@@ -148,8 +152,46 @@ ul .sub-menu > li > a:hover{
     border-radius: 5px;
     transition: 0.5s;
 }
-.content a:hover{
+.hero-content a:hover{
     border-color: #b19361;
     color: #b19361;
 }
 /* hero section style end */
+
+/* services section style start */
+.services-section{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.services-row{
+    display: flex;
+    justify-content: space-between;
+}
+.services-box{
+    flex-basis: 23%;
+}
+.services-box .services-image{
+    width: 77px;
+    margin: auto;
+    display: block;
+}
+.services-box .services-image img{
+    display: block;
+    width: 100%;
+
+}
+.services-box .services-content{
+    text-align: center;
+    display: block;
+}
+.services-box .services-content h2{
+    font-size: 1.6rem;
+    line-height: normal;
+    margin: 27px 0 15px;
+}
+.services-box .services-content p{
+    font-size: 1.4rem;
+    color: #777;
+    line-height: 25px;
+}
+/* services section style start */
