--- a/style.css
+++ b/style.css
@@ -194,4 +194,4 @@ ul .sub-menu > li > a:hover{
     color: #777;
     line-height: 25px;
 }
-/* services section style start */
+/* services section style end */
