--- a/style.css
+++ b/style.css
@@ -195,3 +195,113 @@ ul .sub-menu > li > a:hover{
     line-height: 25px;
 }
 /* services section style end */
+
+/* banner section style start */
+.banner-section{
+    margin-bottom: 100px;
+}
+.banner-img-box-wrapper{
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 20px;
+}
+.banner-img-box-1-item, .banner-img-box-2-item{
+    position: relative;
+}
+.banner-box-1-item-layer{
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 60%;
+    transform: translate(-25%, -50%);
+}
+.banner-box-2-item-layer{
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 60%;
+    transform: translate(-10%, -50%);
+}
+.banner-box-1-item-layer h2{
+    font-size: 2.8rem;
+    font-weight: 400;
+}
+.banner-box-1-item-layer h4{
+    font-size: 1.4rem;
+    font-weight: 100;
+    letter-spacing: 0.2rem;
+    padding: 10px 0px 30px;
+}
+.banner-box-1-item-layer a{
+    border: 1.5px solid #000;
+    padding: 10px 25px;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: 0.5s;
+    display: inline-block;
+}
+.banner-box-1-item-layer a:hover{
+    color: #b19361;
+    border-color: #b19361;
+}
+.banner-box-2-item-layer h4{
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.banner-box-2-item-layer a{
+    font-size: 1.4rem;
+    transition: 0.5s;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+.banner-box-2-item-layer a:hover{
+    color: #b19361;
+}
+.banner-img-box-wrapper img{
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+.bannner-img-box-1, .bannner-img-box-2{
+    width: 50%;
+}
+.bannner-img-box-2{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+}
+
+.banner-img-box-1-item::after, .banner-img-box-2-item::after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 0%;
+    opacity: 1;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.banner-img-box-1-item:hover::after, .banner-img-box-2-item:hover::after{
+    height: 100%;
+    opacity: 0;
+    transition: all 1s;
+}
+.banner-img-box-1-item::before, .banner-img-box-2-item::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0%;
+    height: 100%;
+    opacity: 1;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.banner-img-box-1-item:hover::before, .banner-img-box-2-item:hover::before{
+    width: 100%;
+    opacity: 0;
+    transition: all 1s;
+}
