--- a/style.css
+++ b/style.css
@@ -272,7 +272,6 @@ ul .sub-menu > li > a:hover{
     grid-template-columns: auto auto;
     gap: 20px;
 }
-
 .banner-img-box-1-item::after, .banner-img-box-2-item::after{
     content: "";
     position: absolute;
@@ -305,3 +304,139 @@ ul .sub-menu > li > a:hover{
     opacity: 0;
     transition: all 1s;
 }
+
+/* product section style start */
+.product-section{
+    margin-bottom: 100px;
+}
+.product-header{
+    margin-bottom: 40px;
+}
+.product-header h2{
+    font-size: 2.8rem;
+}
+.product-header p{
+    font-size: 1.4rem;
+    color: #777;
+}
+.product-box-wrapper{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 50px;
+}
+.product-s-box{
+    flex-basis: 23%;
+    /* position: relative; */
+}
+.product-img-box{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+.product-img-1{
+    display: block;
+    opacity: 1;
+    width: 100%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+.product-img-2{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    cursor: pointer;
+    opacity: 0;
+    width: 100%;
+    transition: 0.3s;
+}
+.product-s-box:hover .product-img-1{
+    opacity: 0;
+}
+.product-s-box:hover .product-img-2{
+    opacity: 1;
+}
+.sale-text{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    background-color: #b19361;
+    padding: 0px 10px;
+    z-index: 1;
+}
+.sale-text span{
+    font-size: 1.2rem;
+    color: #fff;
+}
+.product-layer{
+    position: absolute;
+    bottom: -15%;
+    left: 0%;
+    background-color: #000;
+    width: 100%;
+    height: 15%;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    opacity: 0;
+    transition: 0.5s;
+}
+.product-span span{
+    font-size: 1.4rem;
+    font-weight: bold;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.product-span span:hover{
+    color: #b19361;
+}
+.product-icon i{
+    font-size: 1.8rem;
+    padding: 0px 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.product-icon i:hover{
+    color: #b19361;
+}
+.product-s-box:hover .product-layer{
+    bottom: 0%;
+    left: 0%;
+    opacity: 1;
+}
+.product-content{
+    margin-top: 20px;
+}
+.product-content h3 a{
+    font-size: 1.6rem;
+    color: #000;
+    transition: 0.5s;
+}
+
+.product-content h3 a:hover{
+    color: #b19361;
+}
+.content-align{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.prodcut-review{
+    list-style-type: none;
+    color: #b19361;
+}
+.prodcut-review li:last-child{
+    color: #ddd;
+}
+.prodcut-review li{
+    float: left;
+    font-size: 1.4rem;
+    padding: 7px 3px;
+}
+.content-align-right span{
+    font-size: 1.4rem;
+    color: #777;
+}
+/* product section style end */
