--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ ul .sub-menu > li > a:hover{
     letter-spacing: 0.2rem;
     padding: 10px 0px 30px;
 }
-.banner-box-1-item-layer a{
+.dis-btn{
     border: 1.5px solid #000;
     padding: 10px 25px;
     font-size: 1.4rem;
@@ -241,7 +241,7 @@ ul .sub-menu > li > a:hover{
     transition: 0.5s;
     display: inline-block;
 }
-.banner-box-1-item-layer a:hover{
+.dis-btn:hover{
     color: #b19361;
     border-color: #b19361;
 }
@@ -272,7 +272,7 @@ ul .sub-menu > li > a:hover{
     grid-template-columns: auto auto;
     gap: 20px;
 }
-.banner-img-box-1-item::after, .banner-img-box-2-item::after{
+.banner-img-box-1-item::after, .banner-img-box-2-item::after, .banner-two-box::after{
     content: "";
     position: absolute;
     top: 50%;
@@ -283,12 +283,12 @@ ul .sub-menu > li > a:hover{
     opacity: 1;
     background-color: rgba(255, 255, 255, 0.6);
 }
-.banner-img-box-1-item:hover::after, .banner-img-box-2-item:hover::after{
+.banner-img-box-1-item:hover::after, .banner-img-box-2-item:hover::after, .banner-two-box:hover::after{
     height: 100%;
     opacity: 0;
-    transition: all 1s;
+    transition: 1.5s;
 }
-.banner-img-box-1-item::before, .banner-img-box-2-item::before{
+.banner-img-box-1-item::before, .banner-img-box-2-item::before, .banner-two-box::before{
     content: "";
     position: absolute;
     top: 50%;
@@ -299,10 +299,10 @@ ul .sub-menu > li > a:hover{
     opacity: 1;
     background-color: rgba(255, 255, 255, 0.6);
 }
-.banner-img-box-1-item:hover::before, .banner-img-box-2-item:hover::before{
+.banner-img-box-1-item:hover::before, .banner-img-box-2-item:hover::before, .banner-two-box:hover::before{
     width: 100%;
     opacity: 0;
-    transition: all 1s;
+    transition:  1.5s;
 }
 
 /* product section style start */
@@ -440,3 +440,42 @@ ul .sub-menu > li > a:hover{
     color: #777;
 }
 /* product section style end */
+
+/* banner two section style start */
+.banner-section-two {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.banner-two-box{
+    position: relative;
+}
+.banner-two-box{
+    margin: auto;
+    width: 65%;
+    margin-bottom: 100px;
+}
+.banner-two-img{
+    overflow: hidden;
+ }
+.banner-two-img img{
+    width: 100%;
+}
+.banner-two-box > .layer{
+    width: 500px;
+    position: absolute;
+    top: 35%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+}
+.banner-two-box > .layer h2{
+    font-size: 4.8rem;
+    font-weight: 400;
+    line-height: 60px;
+}
+.banner-two-box > .layer p{
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+    color: #777;
+    margin: 0 0 15px;
+}
+/* banner two section style start */
