--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ ul .sub-menu > li > a:hover{
     grid-template-columns: auto auto;
     gap: 20px;
 }
-.banner-img-box-1-item::after, .banner-img-box-2-item::after, .banner-two-box::after{
+.banner-img-box-1-item::after, .banner-img-box-2-item::after, .banner-two-box::after, .banner-3-img::after{
     content: "";
     position: absolute;
     top: 50%;
@@ -283,12 +283,12 @@ ul .sub-menu > li > a:hover{
     opacity: 1;
     background-color: rgba(255, 255, 255, 0.6);
 }
-.banner-img-box-1-item:hover::after, .banner-img-box-2-item:hover::after, .banner-two-box:hover::after{
+.banner-img-box-1-item:hover::after, .banner-img-box-2-item:hover::after, .banner-two-box:hover::after, .banner-3-img:hover::after{
     height: 100%;
     opacity: 0;
     transition: 1.5s;
 }
-.banner-img-box-1-item::before, .banner-img-box-2-item::before, .banner-two-box::before{
+.banner-img-box-1-item::before, .banner-img-box-2-item::before, .banner-two-box::before, .banner-3-img::before{
     content: "";
     position: absolute;
     top: 50%;
@@ -299,7 +299,7 @@ ul .sub-menu > li > a:hover{
     opacity: 1;
     background-color: rgba(255, 255, 255, 0.6);
 }
-.banner-img-box-1-item:hover::before, .banner-img-box-2-item:hover::before, .banner-two-box:hover::before{
+.banner-img-box-1-item:hover::before, .banner-img-box-2-item:hover::before, .banner-two-box:hover::before, .banner-3-img:hover::before{
     width: 100%;
     opacity: 0;
     transition:  1.5s;
@@ -478,4 +478,65 @@ ul .sub-menu > li > a:hover{
     color: #777;
     margin: 0 0 15px;
 }
-/* banner two section style start */
+/* banner two section style end */
+
+/* banner three section style start */
+.banner-section-three{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.banner-section-three-wrapper{
+    display: flex;
+}
+.banner-3-box{
+    flex-basis: 25%;
+}
+.banner-3-img{
+    position: relative;
+    cursor: pointer;
+}
+.banner-3-img img{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.banner-3-layer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px 30px;
+}
+.banner-3-content h2{
+    font-size: 2.4rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+    transition: 0.5s;
+}
+.banner-3-content h2:hover{
+    color: #b19361;
+}
+.banner-3-content p{
+    letter-spacing: 2px;
+    color: #777;
+}
+.banner-3-icon{
+    background-color: #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    transition: 0.5s;
+}
+.banner-3-icon:hover{
+    background-color: #b19361;
+    color: white;
+}
+.banner-3-icon i{
+    font-size: 20px;
+}
+
+/* banner three section style end */
