--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ ul .sub-menu > li > a:hover{
     top: 50%;
     left: 60%;
     transform: translate(-25%, -50%);
+    z-index: 1;
 }
 .banner-box-2-item-layer{
     position: absolute;
@@ -225,6 +226,7 @@ ul .sub-menu > li > a:hover{
     top: 50%;
     left: 60%;
     transform: translate(-10%, -50%);
+    z-index: 1;
 }
 .banner-box-1-item-layer h2{
     font-size: 2.8rem;
@@ -470,6 +472,7 @@ ul .sub-menu > li > a:hover{
     top: 35%;
     left: 70%;
     transform: translate(-50%, -50%);
+    z-index: 1;
 }
 .banner-two-box > .layer h2{
     font-size: 4.8rem;
